--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -32,6 +32,11 @@
 \newcommand{\Exp}{\textsc{Exp}}
 \newcommand{\indep}{\rotatebox[origin=c]{90}{$\models$}}
 \newcommand{\nindep}{{\rotatebox[origin=c]{90}{$\nvDash$}}}
+\newcommand{\bOmega}{\mathbf{\Omega}}
+\newcommand{\bz}{\mathbf{z}}
+\newcommand{\btheta}{\mathbf{\theta}}
+\newcommand{\tijkl}{\theta_{ijk}\powl}
+\newcommand{\bY}{\mathbf{Y}}
 
 \author{Luca Bracone}
 \title{Bayesian joint inference of multiple graphical models using
@@ -265,106 +270,153 @@ vector of $d_{ij}$ values defined similarly as $\omega_{12}$.
 Taking the mode of these distributions gives
 
 \begin{align*}
-	\omega_{12}^{(l+1)} & = -\left\{(s_{22} + \lambda) \Omega_{11}^{-1} + \diag(d_{12})\right\}^{-1} s_{12}                     \\
+	\omega_{12}^{(l+1)} & = -{\left\{(s_{22} + \lambda) \Omega_{11}^{-1} + \diag(d_{12})\right\}^{-1}} s_{12}                   \\
 	\omega_{22}^{(l+1)} & = \frac{n}{s_{22} + \lambda} + \left(\omega_{12}^{(l+1)}\right)^t \Omega_{11}^{-1}\omega_{12}^{(l+1)}
 \end{align*}
 
 \chapter{Extending to multiple graphs}
 We now have the following hierarchical model
 \begin{align*}
-	y_k \mid \Omega_k              & \sim \Np(0, \Omega_k^{-1}),                                                                                \\
-	\omega_{ijk} \mid \delta_{ijk} & \sim \delta_{ijk} \Nor(0, v_1^2) + (1 - \delta_{ijk}) \Nor(0, v_0^2) \quad i \neq j, \quad v_0^2 \ll v_1^2 \\
-	\omega_{iik}                   & \sim \Exp(\lambda_k/2),                                                                                    \\
-	\delta_{ijk}                   & = \1\{z_{ijk} > 0\}                                                                                        \\
-	z_{ijk} \mid \theta_{ijk}      & \sim \Nor(\theta_{ijk}, 1),                                                                                \\
+	y_k \mid \Omega_k              & \sim \Np(0, \Omega_k^{-1}), \quad k=1,\dots,K                                                                     \\
+	\omega_{ijk} \mid \delta_{ijk} & \sim \delta_{ijk} \Nor(0, v_1^2) + (1 - \delta_{ijk}) \Nor(0, v_0^2) \quad i,j = 1,\dots,p, \quad v_0^2 \ll v_1^2 \\
+	\omega_{iik}                   & \sim \Exp(\lambda_k/2),                                                                                           \\
+	\delta_{ijk}                   & = \1\{z_{ijk} > 0\}                                                                                               \\
+	z_{ijk} \mid \theta_{ijk}      & \sim \Nor(\theta_{ijk}, 1),                                                                                       \\
 	\theta_{ij}                    & \sim \textsc{N}_K(0, \Sigma),
 \end{align*}
 where $\Phi$ is the standard normal cumulative distribution function, $v_0,
-	v_1, \lambda_k, \Sigma$ are hyperparameters, and $k=1,\dots,K$ where $K$ is the
-number of graphs.
-The log posterior joint distribution $\log p(\Omega_k, \theta_k, z_k \mid
-	y_k)$ is equal to
-\begin{multline}\label{eq:mg-joint}
-	\text{constant} + \frac{1}{2} \log\det(\Omega_k) -\frac{1}{2} \tr(y_k^t y_k \Omega) \\
-	- \sum_{i<j} \frac{\omega_{ijk}}{2} \frac{1}{v_{\1(z_{ijk} > 0)}} + \lambda_k \sum_i \omega_{iik}
-	- \sum_{i < j} \frac{(z_{ijk} - \theta_{ijk})^2}{2}
-	+ \log p(\theta_k).
-\end{multline}
+	v_1, \lambda_k, \Sigma$ are hyperparameters.
+Let $Y_k$ be the matrix whose rows are observations of $y_k$, and $\mathbf{Y}$
+be $\{Y_1,\dots,Y_K\}$.
+The posterior joint distribution $p(\mathbf{\Omega},  \mathbf{z},
+	\mathbf{\theta} \mid \mathbf{Y})$ decomposes as
+\begin{align}\label{eq:decomp-join}
+	p(\bOmega,  \bz, \btheta \mid \bY) & = p(\bY \mid \bOmega) p(\bOmega \mid \bz)
+	p(\bz \mid \btheta) p(\btheta) p(\bY)\inv \nonumber                            \\
+	                                   & = \prod_{k=1}^K p(Y_k \mid \Omega_k)
+	\prod_{i < j}\prod_{k=1}^K p(\omega_{ijk}
+	\mid z_{ijk}) \prod_{i < j}\prod_{k=1}^K
+	p(z_{ijk} \mid \theta_{ijk})\prod_{i <
+		j} p(\theta_{ij}) p(\bY)\inv.
+\end{align}
+When we take the log of~\ref{eq:decomp-join} and unravel the formula we obtain
+\begin{align*}
+	 & -\frac{Kp(p-1)}{4}\{K \log(2\pi) - \log\det(\Sigma)\} + K p
+	\log\left(\frac{\lambda}{2}\right) + K p \log\left(\frac{p}{2}\right) - K
+	\frac{p(p-1)}{4} \log(2\pi)                                                                  \\
+	 & - \frac{1}{2} \sum_{k=1}^K \bigg[ n_k \{p \log(2\pi) + \log\det(\Omega_k)\} +
+	\tr(S_k \Omega_k)                                                                            \\
+	 & + \sum_{i < j} \log(2\pi v^2_{\1(z_{ijk} > 0)}) +
+	\frac{\omega_{ijk}^2}{v^2_{\1(z_{ijk} > 0)}} + \lambda_k \sum_{i=1}^p
+	\omega_{iik} + \sum_{i < j} (z_{ijk} - \theta_{ijk})^2                                       \\
+	 & + 2 \log\{p(Y_k)\} \bigg] -\frac{1}{2} \sum_{i < j} \theta_{ij}^t \Sigma\inv \theta_{ij}.
+	\stepcounter{equation}\tag{\theequation}\label{eq:mg-joint}
+\end{align*}
 When we take the conditional expectation of~\eqref{eq:mg-joint} over the latent
 variable, $z_k$, we obtain
-\begin{multline}\label{eq:mg-exp}
-	\text{constant} +  - \sum_{i<j} \frac{\omega_{ijk}}{2}
-	\E_{\cdot \mid \cdot}\left(\frac{1}{\1(z_{ijk} > 0)v_1^2 + \1(z_{ijk} \leq 0) v_0^2}\right)
-	+ \lambda_k \sum_i \omega_{iik} \\
-	- \sum_{i < j} \theta_{ijk}\left(\frac{\theta_{ijk}}{2} - \E_{\cdot \mid \cdot}(z_{ijk})\right)
-	+ \log p(\theta_k) + \frac{1}{2} \log\det(\Omega_k) -\frac{1}{2} \tr(y_k^t y_k \Omega),
-\end{multline}
-where $\E_{\cdot \mid \cdot}$ refers to the expectation of $z_k$ conditioned on $\Omega_k, \theta_k$, and $y_k$.
+\begin{align*}
+	Q(\mathbf{\Omega}, \mathbf{\theta}) & =  \E_{\mathbf{z} \mid
+	\mathbf{\Omega}\powl, \mathbf{\theta}\powl, \mathbf{Y}}(\log
+	p(\mathbf{\Omega},  \mathbf{z}, \mathbf{\theta} \mid \mathbf{Y}) \mid
+	\mathbf{\Omega}\powl, \mathbf{\theta}\powl, \mathbf{Y})                    \\
+	                                    & =  \text{constant} -
+	\frac{1}{2} \sum_{k=1}^K \bigg[ n_k \log\det(\Omega_k) +
+	\tr(S_k \Omega_k)                                                          \\
+	                                    & \quad + \sum_{i < j}
+	\omega_{ijk}^2\E_{\cdot \mid \cdot}\left\{\frac{1}{\1(z_{ijk} > 0)v^2_0 +
+		\1(z_{ijk} \leq 0)v^2_1}\right\} + \lambda_k \sum_{i=1}^p \omega_{iik}
+	\\
+	                                    & \quad + \sum_{i < j} -2 \theta_{ijk}
+	\E_{\cdot \mid \cdot}(z_{ijk}) + \theta_{ijk}^2
+	\bigg] + \sum_{i < j} \theta_{ij}^t \Sigma\inv \theta_{ij}
+	\stepcounter{equation}\tag{\theequation}\label{eq:mg-exp}
+\end{align*}
+where $\E_{\cdot \mid \cdot}$ refers to the expectation of $\bz$ conditioned on
+$\bOmega\powl, \btheta\powl$, and $\bY$.
 We now proceed to the computation of the expectation terms.
-First we note that \begin{align*}
-	p(z_{ijk} \mid \Omega_k, \theta_k, y) & =
-	\sum_{\delta_{ijk} = 0}^1 p(z_{ijk} \mid \Omega_k, \theta_k, y_k, \delta_{ijk})
-	p(\delta_{ijk} \mid \omega_{ijk}, \theta_{ijk}, y_k)                                                                                                                                                                                                                                                                                                               \\
-	                                      & = \sum_{\delta_{ijk} = 0}^1 \frac{p(\delta_{ijk} \mid z_{ijk}) p(z_{ijk} \mid \theta) p(\omega_{ijk} \mid \delta_{ijk})}{p(\omega_{ijk} \mid \theta_{ijk})}                                                                                                                                                                \\
-	                                      & = p(z_{ijk} \mid \theta) \sum_{\delta_{ijk} = 0}^1 \frac{p(\delta_{ijk} \mid z_{ijk}) p(\omega_{ijk} \mid \delta_{ijk})}{\sum_{\delta'_{ijk} = 0}^1 p(\omega_{ijk} \mid \delta'_{ijk}) p(\delta'_{ijk} \mid \theta_{ijk})}                                                                                                 \\
-	                                      & = \Nor\left(z_{ijk} \mid \theta_{ijk}, 1\right) \frac{\1(z_{ijk} > 0)\Nor\left(\omega_{ijk} \mid 0,v_1^2\right) + \1(z_{ijk} \leq 0) \Nor\left(\omega_{ijk} \mid 0, v_0^2\right)}{\{1 - \Phi(\theta_{ijk})\} \Nor\left(\omega_{ijk} \mid 0, v_0^2\right) + \Phi(\theta_{ijk}) \Nor\left(\omega_{ijk} \mid 0, v_1^2\right)} \\
-	                                      & := \Nor(z_{ijk} \mid \theta_{ijk}, 1) B(\omega_{ijk}, \theta_{ijk})
+First we note that $p(\delta_{ijk} = 1 \mid \bY, \bOmega\powl, \btheta\powl)$
+is equal to
+\begin{align*}
+	       & \frac{p\left(\omega_{ijk}\powl \mid \delta_{ijk}=1\right) p\left(\delta_{ijk}=1 \mid
+		\theta_{ijk}\powl\right)}{p\left(\omega_{ijk}\powl \mid \delta_{ijk}=0\right) p\left(\delta_{ijk}=0 \mid
+		\theta_{ijk}\powl\right) + p\left(\omega_{ijk}\powl \mid \delta_{ijk}=1\right) p\left(\delta_{ijk}=1 \mid
+	\theta_{ijk}\powl\right)}                                                                     \\
+	=\quad & \frac{\Nor\left(\omega_{ijk}\powl \mid 0,
+		v_1^2\right)\Phi\left(\theta_{ijk}\right)}{\Nor\left(\omega_{ijk}\powl \mid 0,
+		v_0^2\right)\{1 -
+		\Phi\left(\theta_{ijk}\right)\} +
+		\Nor\left(\omega_{ijk}\powl \mid 0, v_1^2\right)
+		\Phi\left(\theta_{ijk}\right)}
 \end{align*}
 Then the first expectation term is given by
 \begin{align*}
-	  & \E_{\cdot \mid \cdot} \left\{ \frac{1}{v_0^2 \1(z_{ijk} \leq 0) + v_1^2 \1(z_{ijk} > 0)} \right\}                                                                                                  \\
-	= & \int_{-\infty}^0 \frac{p(z_{ijk} \mid \Omega_k, \theta_k, y_k )}{v_0^2} dz_{ijk}
-	+ \int_0^{+\infty} \frac{p(z_{ijk} \mid \Omega_k, \theta_k, y_k)}{v_1^2} dz_{ijk}                                                                                                                      \\
-	= & B(\omega_{ijk}, \theta_{ijk}) \left\{\frac{1}{v_0^2} \int_{-\infty}^0 N(z_{ijk} \mid \theta_{ijk}, 1) dz_{ijk} + \frac{1}{v_1^2} \int_0^{+\infty} N(z_{ijk} \mid \theta_{ijk}, 1) dz_{ijk}\right\} \\
-	= & B(\omega_{ijk}, \theta_{ijk}) \left\{\frac{1 - \Phi(\theta_{ijk})}{v_0^2} + \frac{\Phi(\theta_{ijk})}{v_1^2}\right\}
+	 & \E_{\cdot \mid \cdot} \left\{ \frac{1}{v_0^2 \1(z_{ijk} \leq 0) + v_1^2 \1(z_{ijk} > 0)} \right\} \\
+	 & \E_{\cdot \mid \cdot} \left\{ \frac{1}{v_0^2 ( 1 - \delta_{ijk}) + v_1^2 \delta_{ijk}} \right\}   \\
+	 & = \frac{p(\delta_{ijk} = 1 \mid \bY, \bOmega\powl, \btheta\powl)}{v_1^2}
+	+ \frac{1 - p(\delta_{ijk} = 1 \mid \bY, \bOmega\powl,
+		\btheta\powl)}{v_0^2}.
 \end{align*}
-and $\E_{\cdot \mid \cdot}(z_{ijk})$ is equal to
-\begin{equation}\label{eq:expect-z}
-	\sum_{\delta_{ijk} = 0}^1 \E_{\cdot \mid \cdot}\left(z_{ijk} \mid \delta_{ijk}, y_k, \Omega_k, \theta_{ijk}\right) p(\delta_{ijk} \mid y_k, \Omega_k, \theta_{ijk}).
+To calculate the other expectation term, $\E_{\cdot \mid \cdot}(z_{ijk})$, we
+first see that
+\[
+	p(z_{ijk} \mid \bY, \bOmega\powl, \delta_{ijk} = 1, \btheta\powl) =
+	\frac{p(\delta_{ijk} \mid z_{ijk})p(z_{ijk} \mid
+		\btheta\powl)}{p(\delta_{ijk} \mid \btheta\powl)} = \frac{\1(z_{ijk} > 0)
+		\Nor(z_{ijk} \powl \mid \theta_{ijk}\powl, 1)}{\Phi(\theta_{ijk}\powl)},
+\]
+which is a truncated normal random variable, with mean
+\[\theta_{ijk}\powl + \frac{\phi(\theta_{ijk}\powl)}{\Phi(\theta_{ijk}\powl)},\]
+where $\phi$ denotes the PDF of a standard normal random variable.
+Similarly
+\[
+	p(z_{ijk} \mid \bY, \bOmega\powl, \delta_{ijk} = 0, \btheta\powl)
+	=\frac{\1(z_{ijk} \leq 0) \Nor(z_{ijk} \powl \mid \theta_{ijk}\powl, 1)}{1
+		- \Phi(\theta_{ijk}\powl)},
+\]
+which is also truncated normal with mean
+\[
+	\theta_{ijk}\powl - \frac{\phi(\theta_{ijk}\powl)}{1 - \Phi(\theta_{ijk}\powl)}.
+\]
+Therefore $\E_{\cdot \mid \cdot}(z_{ijk})$ is equal to
+\begin{align*}
+	 & \sum_{\delta_{ijk} = 0}^1 \E_{\cdot \mid
+		\cdot}\left(z_{ijk} \mid \delta_{ijk}, y_k, \Omega_k, \theta_{ijk}\right)
+	p(\delta_{ijk} \mid y_k, \Omega_k, \theta_{ijk})                               \\
+	 & = \left\{\tijkl +
+	\frac{\phi(\tijkl)}{\Phi(\tijkl)}\right\}
+	p(\delta_{ijk} = 1 \mid -) + \left\{\theta_{ijk}\powl -
+	\frac{\phi(\theta_{ijk}\powl)}{1 -
+	\Phi(\theta_{ijk}\powl)}\right\}p(\delta_{ijk} = 0 \mid -) \label{eq:expect-z} \\
+	 & = \tijkl - \frac{\phi(\tijkl)}{1 - \Phi(\tijkl)} + p(\delta_{ijk} = 1
+	\mid -) \left\{\frac{\phi(\tijkl)}{\Phi(\tijkl)} + \frac{\phi(\tijkl)}{1
+	- \Phi(\tijkl)}\right\}                                                        \\
+	 & = \tijkl M\left(\tijkl, 0\right) + p(\delta_{ijk} = 1 \mid
+	-)\left\{M\left(\tijkl, 1\right) -
+	M\left(\tijkl, 0\right)\right\},
+\end{align*}
+where $M(\alpha, c)$ denotes Mill's ratio
+\[
+	M(\alpha, c) = (-1)^{1-c}\frac{\phi(\alpha)}{\Phi(\alpha)^c \{1 - \Phi(\alpha)\}^c}.
+\]
+This is the E-step for the multiple graphs setting.
+Now for the M-step, we differentiate $Q(\bOmega, \btheta)$ with respect to
+$\theta_{ijk}$ to obtain
+\begin{equation}\label{eq:dQdtheta}
+	-2 q_{ijk} + 2 \theta_{ijk} + \sum_{k' = 1}^K \Sigma_{k k'}\inv \theta_{ijk'} + \sum_{k' = 1}^K \Sigma_{k' k}\inv \theta_{ijk'}.
 \end{equation}
-We compute the expectation terms in~\eqref{eq:expect-z}. When $\delta_{ijk} = 1$ it is equal to
+Equation~\eqref{eq:dQdtheta} is equal to
+zero when
 \begin{align*}
-	 & \int_{-\infty}^\infty z_{ijk} p(z_{ijk} \mid y_k, \Omega_k, \delta_{ijk} = 1, \theta_k) dz_{ijk}                                               \\
-	 & = \int_{-\infty}^{+\infty} z_{ijk} \frac{p(\delta_{ijk} = 1 \mid z_{ijk}) p(z_{ijk} \mid \theta_k)}{p(\delta_{ijk} = 1 \mid \theta_k)}dz_{ijk} \\
-	 & = \frac{1}{\Phi(\theta_{ijk})} \int_{-\infty}^{+\infty} z_{ijk} \1(z_{ijk} > 0) \Nor(z_{ijk} \mid \theta_{ijk}, 1) dz_{ijk}                    \\
-	 & = \frac{1}{\Phi(\theta_{ijk})} \int_0^{+\infty} z_{ijk} \Nor(z_{ijk} \mid \theta_{ijk}, 1)dz_{ijk}                                             \\
-	 & = \frac{1}{\Phi(\theta_{ijk})} \left\{\theta_{ijk} - \frac{\phi(\theta_{ijk})}{\Phi(\theta_{ijk})}\right\},
+	\theta_{ijk} & = q_{ijk} + \frac{1}{2}\left(\sum_{k' = 1}^K \Sigma_{k k'}\inv \theta_{ijk'} + \sum_{k' = 1}^K \Sigma_{k' k}\inv \theta_{ijk'}\right) \\
+	             & = q_{ijk} + \Sigma_{k \, \cdot}\inv \theta_{ij},
 \end{align*}
-where in the last line we used the formula for the mean of a truncated normal random variable.
-When $\delta_{ijk} = 0$ it is equal to
+where $q_{ijk} = \E_{\cdot \mid \cdot}(z_{ijk})$ and $\Sigma_{k \, \cdot}\inv$ is
+the $k$-th line of $\Sigma\inv$.
+The updates for $\bOmega$ are obtained in a similar fashion as before:
 \begin{align*}
-	 & \frac{1}{1 - \Phi(\theta_{ijk})} \int_{-\infty}^0 z_{ijk} \Nor(z_{ijk} \mid \theta_{ijk}, 1) dz_{ijk}          \\
-	 & = \frac{1}{1 - \Phi(\theta_{ijk})} \left\{\theta_{ijk} + \frac{\phi(\theta_{ijk})}{\Phi(\theta_{ijk})}\right\}
+	\omega_{k,12}^{(l+1)} & = \left\{(s_{k, 22} + \lambda) \left(\Omega_{k, 11}^{(l+1)}\right)\inv + \diag(d_{k, 12})\inv\right\} s_{k, 12}   \\
+	\omega_{k, 22}        & = \frac{n_k}{s_{k,22} + \lambda_k} \left(\omega_{k,12}^{(l+1)}\right)^t \Omega_{k, 11}\inv \omega_{k, 12}^{(l+1)}
 \end{align*}
-The conditional distribution of $\delta_{ijk}$ is
-\begin{align}
-	p(\delta_{ijk} \mid y_k, \Omega_k, \theta_k)
-	 & = \frac{p(\omega_{ijk} \mid \delta_{ijk}) p(\delta_{ijk} \mid \theta_{ijk})}
-	{p(\omega_{ijk} \mid \theta_k)}                                                  \\
-	 & = \frac{p(\omega_{ijk} \mid \delta_{ijk}) p(\delta_{ijk} \mid \theta_{ijk})}
-	{\sum_{\delta'_{ijk} = 0}^1p(\omega_{ijk} \mid \delta'_{ijk})
-	p(\delta'_{ijk} \mid \theta_k)}                                                  \\
-	 & := \frac{p(\omega_{ijk} \mid \delta_{ijk}) p(\delta_{ijk} \mid \theta_{ijk})}
-	{C(\omega_{ijk}, \theta_{ijk})}\label{eq:delta-cond}.
-\end{align}
-When we input $\delta_{ijk} = 1$ to~\eqref{eq:delta-cond} we find
-\[
-	\frac{\Phi(\theta_{ijk}) \Nor(\omega_{ijk} \mid 0, v_1^2)}{C(\omega_{ijk}, \theta_{ijk})},
-\]
-and for $\delta_{ijk} = 0$ we find
-\[
-	\frac{\{1 - \Phi(\theta_{ijk})\} \Nor(\omega_{ijk} \mid 0, v_0^2)}
-	{C(\omega_{ijk}, \theta_{ijk})}
-\]
-instead.
-Putting it all together we find that
-\[
-	\E_{\cdot \mid \cdot}(z) = \frac{\Nor(\omega \mid 0, v_1^2)}{C(\omega,
-		\theta)} \left\{\theta - \frac{\phi(\theta)}{\Phi(\theta)}\right\} +
-	\frac{\Nor(\omega \mid 0, v_0^2)}{C(\omega, \theta)} \left\{\theta +
-	\frac{\phi(\theta)}{\Phi(\theta)}\right\},
-\]
-where we omitted the subscripts for brevity.
 
 \chapter{Choosing hyperparameters}
 The performance of the model is heavily influenced by the values of the
